<?xml version="1.0"?>
<package>
  <name>mrl_ipcamera</name>
  <version>2.6.0</version>
  <description>
    mrl_ipCamera
    Orginally written by Alireza Hosseini
    Updated to ROS Indigo by Mohammad Arvan.
    Updated to ROS Kinetic by Ahmadreza Zibaei
  </description>
  <author>Alireza Hosseini</author>
  <maintainer email="mo.arvan@gmail.com">Mohammad Arvan</maintainer>
  <maintainer email="zibaeiahmadreza@gmail.com">Ahmadreza Zibaei</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
